# hark-lang

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  generate_requirements.py  localstack.sh  publish.sh  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
c9_lambdas/: common.mk  create.py
c9_lambdas/c9run/: Makefile  main.py
dist_data/: teal.toml
doc/: README.md
example_c9/: README.md  deploy.sh  deps.sh  hello.c9  init.sh  manual.sh  serverless.tpl.yml  serverless.yaml  test.sh  test_args.json  test_main.json  toplevel.sh
example_c9/pkg/: example.py
examples/: s3trigger.py
examples/9chan/: Makefile  README.md  service.py
examples/dpp/: Makefile  README.md  service.py
examples/fractals/: .gitignore  README.md  hark.toml  run_minio.sh  service.hk  service.tl  teal.toml
examples/guide/: hark.toml  service.hk  service.tl  teal.toml
examples/hello/: README.md  hark.toml  hello.tl  serverless.yml  teal.toml  test.hk  test.sh  test_concurrent.json  test_printer.json
examples/repeat/: service.hk
examples/simple_api/: Makefile  README.md  lib.py  requirements.txt
examples/video/: README.md  hark.toml  service.tl  teal.toml  test.sh  video.hk  video.tl
examples/wiki_nlp/: .gitignore  README.md  make_src_layer.sh  serverless.yml  service.tl  teal.toml
guide/: README.md  book.toml  deploy.sh  netlify.toml  preview.sh
guide/src/: 001_getting_started.md  002_00_language_overview.md  002_01_core_concepts.md  002_01_lang_ref.md  002_01_services.md  002_02_machine.md  002_03_compiler.md  002_03_language_reference.md  002_04_stdlib.md  002_05_events.md  002_05_stdlib.md  002_06_events.md  002_06_infrastructure.md  003_zero_to_hero.md  004_synthesis_deployment.md  005_rough_edges.md  SUMMARY.md  aws.md  configuration.md  debugging.md  development.md  introduction.md  use_cases.md  why.md
integration/: .gitignore  README.md  test_user_policy.json
integration/stories/: buildtest.mk  common.mk
parser_experiments/: parse.py  parse_tatsu.py  parse_v1.py  parsec.py  plyit.py  teal_ops.py
scratch/: README.md  dokklib.py  forthvm.py  make_dotviz.py  recur.py  simple.py
scratch/c9apithing/: c9_config.yaml  service.c9
scratch/parser/: c9_func.lark  main.py  main2.py  parser.py  python.lark  runit.py
scripts/: dynamodb_local.sh  generate_requirements.py  localstack.sh  make_lambda_dist.sh  make_layer.sh  rebuild_venv.sh  release.sh  run_dynamodb_local.sh  testing_env.sh  upload.sh
src/: test.tl  test_inner.tl
src/c9/: __init__.py  c9exe.py  constants.py  helpers.py  infrastructure.py  lambda_utils.py  packer.py  py_to_c9e.py  run.py  runtimes.py  service.py  visualise.py
src/c9c/: __init__.py  cli.py  compiler.py  compiler_utils.py  constrain.py  handlers.py  infrastructure.py  lambda_utils.py  lang.py  loader.py  machine.py  service.py  state.py  stdlib.py  synthesiser.py
src/hark_lang/: __init__.py  config.py  config_classes.py  exceptions.py  load.py
src/teal/: lambda_utils.py  run.py
src/teal_examples/: __init__.py  load_examples.py
src/teal_lang/: __init__.py  config.py  config_classes.py  exceptions.py  load.py
test/: __init__.py  conftest.py  old_test_endtoend.py  old_test_machine.py  simple_functions.py  test_api_spec.py  test_ast_tree.py  test_aws_db.py  test_aws_utils.py  test_both.py  test_c9.py  test_c9e.py  test_cli.py  test_compiler.py  test_controllers.py  test_ddb_model.py  test_endtoend.py  test_examples.py  test_infrastructure.py  test_instruction.py  test_load_examples.py  test_loader.py  test_machine.py  test_parser.py  test_synthesis.py  test_types.py  utils.py
(+356 files in other folders)
