[tool.poetry]
name = "c9"
version = "0.1.0"
description = ""
authors = ["Ric da Silva <ric@condense9.com>"]
homepage = "https://www.condense9.com"
packages = [
    { include = "c9", from = "src" },
]

[tool.poetry.scripts]
c9 = 'c9.cli.main:main'

[tool.poetry.dependencies]
python = "^3.8"
pynamodb = "*"
docopt = "*"
graphviz = "^0.13.2"
schema = "^0.7.2"
lark-parser = "^0.8.5"
pyyaml = "^5.3.1"
pydot = "^1.4.1"

[tool.poetry.dev-dependencies]
boto3 = "*"
botocore = "*"
pytest = "^5.2"
pytest-repeat = "*"
md-tangle = {version = "*", optional = true}
sphinx = {version = "*", optional = true}
pydoc-markdown = {version = "^2.1.3", optional = true}
localstack = {version = "^0.11.0", optional = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
