[tool.poetry]
name = "teal-lang"
version = "0.1.0"
description = "The Teal Programming Language"
license = "Apache-2.0"
authors = ["Ric da Silva <ric@condense9.com>"]
maintainers = ["Ric da Silva <ric@condense9.com>"]
readme = "README.md"
homepage = "https://www.condense9.com"
repository = "https://github.com/condense9/teal-lang"
keywords = [
    "serverless",
    "orchestration",
    "concurrency",
    "aws",
    "language"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development",
    "Intended Audience :: Developers"
]
packages = [
    { include = "teal_lang", from = "src" },
]
exclude = ["teal_lang/examples/**.*"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/condense9/teal-lang/issues"

[tool.poetry.scripts]
teal = 'teal_lang.cli.main:main'

[tool.poetry.dependencies]
python = "^3.8"
pynamodb = "*"
docopt = "*"
graphviz = "^0.13.2"
schema = "^0.7.2"
lark-parser = "^0.8.5"
pyyaml = "^5.3.1"
pydot = "^1.4.1"

[tool.poetry.dev-dependencies]
boto3 = "*"
botocore = "*"
pytest = "^5.2"
pytest-repeat = "*"
# md-tangle = {version = "*", optional = true}
# sphinx = {version = "*", optional = true}
# pydoc-markdown = {version = "^2.1.3", optional = true}


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
